--- a/_posts/2015-04-05-matplotlib-index.html
+++ b/_posts/2015-04-05-matplotlib-index.html
@@ -5,10 +5,10 @@ description: Publish your Matplotlib figures to the web with one line of code! E
 layout: langindex
 language: matplotlib
 ---
-<div style="text-align: center;position: relative;top: -210px;">					
+<div style="text-align: center;position: relative;top: -210px;">
   	<h2 class="centered" style="color: white;margin-bottom: 20px;">offline plotly is here.</h2>
-	<h5 style="color: white;">download for IPython notebook for $999/year</h5>
-	<a class="button" href="http://purchasing.plot.ly/plotly-offline-ipython" target="_blank" 
+	<h5 style="color: white;">download for IPython notebook for ${{site.offline_price}}/year</h5>
+	<a class="button" href="http://purchasing.plot.ly/plotly-offline-ipython" target="_blank"
 		style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
 </div>
 
@@ -41,14 +41,14 @@ sc = ax.scatter(x, y, c=c,
 ax.grid()
 
 plot_url = py.plot_mpl(fig)
-						
+
 						</code></pre>
 					</div>
 				</div>
 				<div class="six columns">
 					<div class="border">
                 <iframe id="igraph" scrolling="no" height="462" src="https://plot.ly/~chris/2252.embed" width="100%">
-                </iframe>						
+                </iframe>
 					</div>
 				</div>
 			</div>
@@ -64,6 +64,6 @@ plot_url = py.plot_mpl(fig)
 	<h2>Documentation Examples</h2>
 		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","matplotlib"  | where:"has_thumbnail",true %}
 		{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","matplotlib" %}
-		
+
 		{% include documentation_eg.html %}
 
