--- a/_posts/2015-07-19-pandas.html
+++ b/_posts/2015-07-19-pandas.html
@@ -5,10 +5,10 @@ description: "Plotly's Pandas graphing library makes interactive, publication-qu
 layout: langindex
 language: pandas
 ---
-<div style="text-align: center;position: relative;top: -210px;">					
+<div style="text-align: center;position: relative;top: -210px;">
   	<h2 class="centered" style="color: white;margin-bottom: 20px;">offline plotly is here.</h2>
-	<h5 style="color: white;">download for IPython notebook for $999/year</h5>
-	<a class="button" href="http://purchasing.plot.ly/plotly-offline-ipython" target="_blank" 
+	<h5 style="color: white;">download for IPython notebook for ${{site.offline_price}}/year</h5>
+	<a class="button" href="http://purchasing.plot.ly/plotly-offline-ipython" target="_blank"
 		style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
 </div>
 
