--- a/_posts/plotly_js/bar/2015-04-09-grouped-bar.html
+++ b/_posts/plotly_js/bar/2015-04-09-grouped-bar.html
@@ -1,21 +1,21 @@
 ---
 name: Grouped Bar Chart
-plot_url: https://plot.ly/~PlotBot/40
+plot_url: http://codepen.io/plotly/embed/79bf01113db127f234e92e5c535dbc43/?height=400&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bar
-order: 6
+order: 2
 sitemap: false
 ---
 var trace1 = {
-  x: ["giraffes", "orangutans", "monkeys"], 
-  y: [20, 14, 23], 
-  name: "SF Zoo", 
+  x: ["giraffes", "orangutans", "monkeys"],
+  y: [20, 14, 23],
+  name: "SF Zoo",
   type: "bar"
 };
 var trace2 = {
-  x: ["giraffes", "orangutans", "monkeys"], 
-  y: [12, 18, 29], 
-  name: "LA Zoo", 
+  x: ["giraffes", "orangutans", "monkeys"],
+  y: [12, 18, 29],
+  name: "LA Zoo",
   type: "bar"
 };
 var data = [trace1, trace2];
