--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -5,6 +5,7 @@ description: Publish interactive ggplot2 figures to the web with one line of cod
 layout: langindex
 language: ggplot2
 ---
+{% include ad-text.html %}
 
 <h1 class="centered">Plotly ggplot2 Library</h1>
 <h3 class="centered">Publish your ggplot2 figures to the web with one line!</h3>
