--- a/_posts/2015-04-05-matlab-index.html
+++ b/_posts/2015-04-05-matlab-index.html
@@ -5,12 +5,7 @@ description: Plotly's MATLAB graphing library makes interactive, publication-qua
 layout: langindex
 language: matlab
 ---
-<div style="text-align: center;position: relative;top: -210px;">
-  	<h2 class="centered" style="color: white;margin-bottom: 20px;">offline plotly is here.</h2>
-	<h5 style="color: white;">download for MATLAB for ${{site.offline_price}}/year</h5>
-	<a class="button" href="http://purchasing.plot.ly/plotly-offline-matlab" target="_blank"
-		style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
-</div>
+{% include ad-text.html %}
 
 <h1 class="centered">Plotly MATLAB Library</h1>
 <h3 class="centered">Publish your MATLAB figures to the web with one line!</h3>
