--- a/_posts/2015-05-25-ipython-notebooks_index.html
+++ b/_posts/2015-05-25-ipython-notebooks_index.html
@@ -13,8 +13,8 @@ has_thumbnail: false
 <h1>Plotly for IPython Notebooks</h1>
 
     <div class="row btnrow">
-        <a href="/python/ipython-notebooks/" class="button no_underline">Getting Started</a>
-        <a href="/python/ipython-notebooks/gallery" class="button no_underline">Notebook Gallery</a>
+        <a href="/ipython-notebooks/" class="button no_underline">Getting Started</a>
+        <a href="/ipython-notebooks/gallery" class="button no_underline">Notebook Gallery</a>
     </div>
 
     <h2>Getting started</h2>
