--- a/_posts/python/density-plots/2015-04-09-2dhistogram-contour-subplots.html
+++ b/_posts/python/density-plots/2015-04-09-2dhistogram-contour-subplots.html
@@ -33,7 +33,7 @@ trace2 = Histogram2dContour(
     x=x,
     y=y,
     name='density',
-    n2d-density-plots=20,
+    ncontours=20,
     colorscale='Hot',
     reversescale=True,
     showscale=False
