--- a/_posts/2015-04-05-matplotlib-index.html
+++ b/_posts/2015-04-05-matplotlib-index.html
@@ -5,12 +5,7 @@ description: Publish your Matplotlib figures to the web with one line of code! E
 layout: langindex
 language: matplotlib
 ---
-<div style="text-align: center;position: relative;top: -210px;">
-  	<h2 class="centered" style="color: white;margin-bottom: 20px;">offline plotly is here.</h2>
-	<h5 style="color: white;">download for IPython notebook for ${{site.offline_price}}/year</h5>
-	<a class="button" href="http://purchasing.plot.ly/plotly-offline-ipython" target="_blank"
-		style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
-</div>
+{% include ad-text.html %}
 
 <h1 class="centered">Plotly Matplotlib Library</h1>
 <h3 class="centered">Publish your Matplotlib figures to the web with one line!</h3>
