--- a/_posts/2015-04-05-python-index.html
+++ b/_posts/2015-04-05-python-index.html
@@ -5,14 +5,9 @@ description: "Plotly's Python graphing library makes interactive, publication-qu
 layout: langindex
 language: python
 ---
-<div style="text-align: center;position: relative;top: -210px;">
-  	<h2 class="centered" style="color: white;margin-bottom: 20px;">offline plotly is here.</h2>
-	<h5 style="color: white;">download for IPython notebook for ${{site.offline_price}}/year</h5>
-	<a class="button" href="http://purchasing.plot.ly/plotly-offline-ipython" target="_blank"
-		style="text-decoration: none;font-size: 14px;display: inline-block;padding: 12px 24px;">DOWNLOAD</a>
-</div>
+{% include ad-text.html %}
 
-<h1 class="centered">Plotly Python Library</h1>
+<h1 class="centered shiftup">Plotly Python Library</h1>
 	<div class="row centered btnrow">
 		<a href="/python/getting-started/" class="button no_underline">Getting Started</a>
 		<a href="/python/user-guide/" class="button no_underline">User Guide</a>
@@ -21,7 +16,7 @@ language: python
 	</div>
 	<div class="tipbox row">
 		<img src="{{site.staticurl}}/images/matplotlib_med.png" class="api-thum-img" alt="Matplotlib logo">
-	    <p><strong>Matplotlib</strong> user? Check out <a href="{{ site.url }}/matplotlib/">our matplotlib figure converter page</a> for examples and documentation!<p>
+	    <p><strong>Matplotlib</strong> user? Check out the <strong><a href="{{ site.url }}/matplotlib/" style="color: #447adb;">matplotlib figure converter</a></strong><p>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
