--- a/_posts/2015-05-25-ipython-notebooks_gallery.html
+++ b/_posts/2015-05-25-ipython-notebooks_gallery.html
@@ -11,8 +11,8 @@ has_thumbnail: false
 <h1>IPython Notebook Gallery</h1>
 
 <div class="row btnrow">
-    <a href="/python/ipython-notebooks/" class="button no_underline">Getting Started</a>
-    <a href="/python/ipython-notebooks/gallery" class="button no_underline">Notebook Gallery</a>
+    <a href="/ipython-notebooks/" class="button no_underline">Getting Started</a>
+    <a href="/ipython-notebooks/gallery" class="button no_underline">Notebook Gallery</a>
 </div>
 
 <p>
