add node redirect for fileopt for now

--- a/_posts/nodejs/fileopt/2015-04-09-fileopt_node_js_index.html
+++ b/_posts/nodejs/fileopt/2015-04-09-fileopt_node_js_index.html
@@ -1,7 +1,8 @@
 ---
 title: Node JS Overwriting, Extending, Appending, and Creating New Graphs | Examples | Plotly
 name: Overwriting, Extending, Appending, and Creating New Graphs
-permalink: nodejs/file-options//
+permalink: nodejs/file-options/
+redirect_to: https://github.com/plotly/plotly-nodejs#var-stream--plotlystreamtoken-callback
 description: How to manage your files in nodejs with the fileopt parameter.
 layout: base
 thumbnail: /images/fileopt.png
