corrections to line-plots and bar charts

--- a/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
@@ -1,5 +1,5 @@
 ---
-name: Customizing In"myDiv"ual Bar Colors
+name: Customizing In'myDiv'ual Bar Colors
 plot_url: http://codepen.io/plotly/embed/4f14500e8ce23a9b39cd100ccc59425d/?height=400&theme-id=15263&default-tab=result
 language: plotly_js
 suite: bar
@@ -18,7 +18,7 @@ var trace1 = {
 data = [trace1];
 
 layout = {
-  title: 'Least Used Feature',
+  title: 'Least Used Feature'
 };
 
 Plotly.plot('myDiv', data, layout);
