--- a/_posts/plotly_js/bar/2015-04-09-basic-bar.html
+++ b/_posts/plotly_js/bar/2015-04-09-basic-bar.html
@@ -8,9 +8,9 @@ sitemap: false
 ---
 var data = [
   {
-    x: ["giraffes", "orangutans", "monkeys"],
+    x: ['giraffes', 'orangutans', 'monkeys'],
     y: [20, 14, 23],
-    type: "bar"
+    type: 'bar'
   }
 ];
-Plotly.plot("myDiv", data);
+Plotly.plot('myDiv', data);
