--- a/_posts/plotly_js/bar/2015-04-09-grouped-bar.html
+++ b/_posts/plotly_js/bar/2015-04-09-grouped-bar.html
@@ -7,17 +7,17 @@ order: 2
 sitemap: false
 ---
 var trace1 = {
-  x: ["giraffes", "orangutans", "monkeys"],
+  x: ['giraffes', 'orangutans', 'monkeys'],
   y: [20, 14, 23],
-  name: "SF Zoo",
-  type: "bar"
+  name: 'SF Zoo',
+  type: 'bar'
 };
 var trace2 = {
-  x: ["giraffes", "orangutans", "monkeys"],
+  x: ['giraffes', 'orangutans', 'monkeys'],
   y: [12, 18, 29],
-  name: "LA Zoo",
-  type: "bar"
+  name: 'LA Zoo',
+  type: 'bar'
 };
 var data = [trace1, trace2];
-var layout = {barmode: "group"};
-Plotly.plot("myDiv", data, layout);
+var layout = {barmode: 'group'};
+Plotly.plot('myDiv', data, layout);
