--- a/_posts/plotly_js/bar/2015-08-07-hover-text-bar.html
+++ b/_posts/plotly_js/bar/2015-08-07-hover-text-bar.html
@@ -24,7 +24,7 @@ var trace1 = {
 
 data = [trace1];
 layout = {
-  title: 'January 2013 Sales Report',
+  title: 'January 2013 Sales Report'
 };
 
 Plotly.plot('myDiv', data, layout);
