--- a/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
+++ b/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
@@ -79,7 +79,7 @@ layout = {
   annotations: []
 };
 
-for (i = 0; i < 7; i += 1) {
+for ( var i = 0 ; i < 7 ; i++ ) {
   var result = {
     x: xData[i],
     y: yData[i],
