--- a/_posts/plotly_js/horizontal-bar/2015-07-08-colored-bar-chart.html
+++ b/_posts/plotly_js/horizontal-bar/2015-07-08-colored-bar-chart.html
@@ -34,7 +34,7 @@ var trace2 = {
 data = [trace1, trace2];
 layout = {
   title: 'Colored Bar Chart',
-  barmode: 'stack',
+  barmode: 'stack'
 };
 
 Plotly.plot('myDiv', data, layout);
