--- a/_posts/plotly_js/line-plots/2015-08-07-line-and-scatter-plot.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-line-and-scatter-plot.html
@@ -10,13 +10,13 @@ sitemap: false
 var trace1 = {
   x: [1, 2, 3, 4],
   y: [10, 15, 13, 17],
-  mode: 'markers',
+  mode: 'markers'
 };
 
 var trace2 = {
   x: [2, 3, 4, 5],
   y: [16, 5, 11, 9],
-  mode: 'lines',
+  mode: 'lines'
 };
 
 var trace3 = {
