--- a/_posts/plotly_js/line-plots/2015-08-07-styling-line-plot.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-styling-line-plot.html
@@ -15,7 +15,7 @@ trace1 = {
   name: 'Red',
   line: {
     color: 'rgb(219, 64, 82)',
-    width: 3,
+    width: 3
   }
 };
 
@@ -27,14 +27,14 @@ trace2 = {
   name: 'Blue',
   line: {
     color: 'rgb(55, 128, 191)',
-    width: 1,
+    width: 1
   }
 };
 
 layout = {
   width: 500,
   height: 500
-}
+};
 
 data = [trace1, trace2];
 
