--- a/_posts/plotly_js/bar/2015-08-07-barchart-direct-labels.html
+++ b/_posts/plotly_js/bar/2015-08-07-barchart-direct-labels.html
@@ -31,10 +31,10 @@ var annotationContent = [];
 data = [trace1];
 layout = {
   title: 'January 2013 Sales Report',
-  annotations: annotationContent,
+  annotations: annotationContent
 };
 
-for( i = 0 ; i < xValue.length ; i +=1 ){
+for( var i = 0 ; i < xValue.length ; i++ ){
   var result = {
     x: xValue[i],
     y: yValue[i],
