--- a/_posts/plotly_js/line-plots/2015-04-09-basic-line.html
+++ b/_posts/plotly_js/line-plots/2015-04-09-basic-line.html
@@ -9,12 +9,12 @@ sitemap: false
 var trace1 = {
   x: [1, 2, 3, 4],
   y: [10, 15, 13, 17],
-  type: "scatter"
+  type: 'scatter'
 };
 var trace2 = {
   x: [1, 2, 3, 4],
   y: [16, 5, 11, 9],
-  type: "scatter"
+  type: 'scatter'
 };
 var data = [trace1, trace2];
-Plotly.plot("myDiv", data);
+Plotly.plot('myDiv', data);
