--- a/_posts/plotly_js/line-plots/2015-08-07-labelling-with-annotations.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-labelling-with-annotations.html
@@ -11,14 +11,14 @@ var xData = [
   [2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013],
   [2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013],
   [2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013],
-  [2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013],
+  [2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2013]
 ];
 
 var yData = [
   [74, 82, 80, 74, 73, 72, 74, 70, 70, 66, 66, 69],
   [45, 42, 50, 46, 36, 36, 34, 35, 32, 31, 31, 28],
   [13, 14, 20, 24, 20, 24, 24, 40, 35, 41, 43, 50],
-  [18, 21, 18, 21, 16, 14, 13, 18, 17, 16, 19, 23],
+  [18, 21, 18, 21, 16, 14, 13, 18, 17, 16, 19, 23]
 ];
 
 var colors = ['rgba(67,67,67,1)', 'rgba(115,115,115,1)', 'rgba(49,130,189, 1)',
@@ -31,7 +31,7 @@ var labels = ['Television', 'Newspaper', 'Internet', 'Radio'];
 
 data = [];
 
-for (i = 0; i < xData.length; i += 1) {
+for ( var i = 0 ; i < xData.length ; i++ ) {
   var result = {
     x: xData[i],
     y: yData[i],
@@ -40,7 +40,7 @@ for (i = 0; i < xData.length; i += 1) {
     line: {
       color: colors[i],
       width: lineSize[i]
-    },
+    }
   };
   var result2 = {
     x: [xData[i][0], xData[i][11]],
@@ -74,7 +74,7 @@ layout = {
       family: 'Arial',
       size: 12,
       color: 'rgb(82, 82, 82)'
-    },
+    }
   },
   yaxis: {
     showgrid: false,
@@ -101,7 +101,7 @@ layout = {
       font:{
         family: 'Arial',
         size: 30,
-        color: 'rgb(37,37,37)',
+        color: 'rgb(37,37,37)'
       },
       showarrow: false
     },
@@ -119,11 +119,11 @@ layout = {
         size: 12,
         color: 'rgb(150,150,150)'
       }
-    },
+    }
   ]
 };
 
-for (i = 0; i < xData.length; i += 1) {
+for( var i = 0 ; i < xData.length ; i++ ) {
   var result = {
     xref: 'paper',
     x: 0.05,
@@ -136,7 +136,7 @@ for (i = 0; i < xData.length; i += 1) {
       family: 'Arial',
       size: 16,
       color: 'black'
-    },
+    }
   };
   var result2 = {
     xref: 'paper',
@@ -154,6 +154,6 @@ for (i = 0; i < xData.length; i += 1) {
   };
 
   layout.annotations.push(result, result2);
-}
+};
 
 Plotly.plot('myDiv', data, layout);
