--- a/_posts/plotly_js/area/2015-04-09-basic-area.html
+++ b/_posts/plotly_js/area/2015-04-09-basic-area.html
@@ -1,22 +1,22 @@
 ---
 name: Basic Overlaid Area Chart
-plot_url: https://plot.ly/~PlotBot/42
+plot_url: https://codepen.io/plotly/embed/d7cac856a2a4f35bbec4b08e7845c14f/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
 suite: area
 order: 1
 sitemap: false
 ---
 var trace1 = {
-  x: [1, 2, 3, 4], 
-  y: [0, 2, 3, 5], 
-  fill: "tozeroy", 
-  type: "scatter"
+  x: [1, 2, 3, 4],
+  y: [0, 2, 3, 5],
+  fill: 'tozeroy',
+  type: 'scatter'
 };
 var trace2 = {
-  x: [1, 2, 3, 4], 
-  y: [3, 5, 1, 7], 
-  fill: "tonexty", 
-  type: "scatter"
+  x: [1, 2, 3, 4],
+  y: [3, 5, 1, 7],
+  fill: 'tonexty',
+  type: 'scatter'
 };
 var data = [trace1, trace2];
-Plotly.plot("myDiv", data);
+Plotly.plot('myDiv', data);
