colorscales, heatmaps, pie charts, polar charts and wind charts

--- a/_posts/plotly_js/heatmap/2015-04-09-basic-heatmap.html
+++ b/_posts/plotly_js/heatmap/2015-04-09-basic-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Basic Heatmap
-plot_url: https://plot.ly/~PlotBot/69
+plot_url: https://codepen.io/plotly/embed/c7617e3c3243f789e11d6869a1882e50/?height=454&theme-id=15263&default-tab=result
 language: plotly_js
 suite: heatmap
 order: 1
@@ -8,8 +8,9 @@ sitemap: false
 ---
 var data = [
   {
-    z: [[1, 20, 30], [20, 1, 60], [30, 60, 1]], 
-    type: "heatmap"
+    z: [[1, 20, 30], [20, 1, 60], [30, 60, 1]],
+    type: 'heatmap'
   }
 ];
-Plotly.plot("myDiv", data);
+
+Plotly.plot('myDiv', data);
