--- a/_posts/plotly_js/heatmap/2015-04-09-labelled-heatmap.html
+++ b/_posts/plotly_js/heatmap/2015-04-09-labelled-heatmap.html
@@ -1,6 +1,6 @@
 ---
 name: Heatmap with Categorical Axis Labels
-plot_url: https://plot.ly/~PlotBot/74
+plot_url: https://codepen.io/plotly/embed/4cff7f15035142f88f62c9a4700c1d70/?height=495&theme-id=15263&default-tab=result
 language: plotly_js
 suite: heatmap
 order: 2
@@ -8,10 +8,11 @@ sitemap: false
 ---
 var data = [
   {
-    z: [[1, 20, 30, 50, 1], [20, 1, 60, 80, 30], [30, 60, 1, -10, 20]], 
-    x: ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"], 
-    y: ["Morning", "Afternoon", "Evening"], 
-    type: "heatmap"
+    z: [[1, 20, 30, 50, 1], [20, 1, 60, 80, 30], [30, 60, 1, -10, 20]],
+    x: ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday'],
+    y: ['Morning', 'Afternoon', 'Evening'],
+    type: 'heatmap'
   }
 ];
-Plotly.plot("myDiv", data);
+
+Plotly.plot('myDiv', data);
