--- a/_posts/ggplot2/grid/2015-07-23-positive-negative.html
+++ b/_posts/ggplot2/grid/2015-07-23-positive-negative.html
@@ -2,9 +2,9 @@
 name: plot positive and negative time series data
 plot_url: https://plot.ly/~MattSundquist/17938/none-none-none-none-none-none-none-none-none-none-none-none/
 language: ggplot2
-suite: time-series
+suite: grid
 description: Inspired by <a href="http://stackoverflow.com/questions/12619553/elegant-ways-to-visualise-positive-negative-time-series-data-with-ggplot">Stack Overflow</a>.
-order: 7
+order: 10
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
