Update and rename _posts/ggplot2/time-series/2015-07-23-geom-line.html to _posts/ggplot2/facet_grid/2015-07-23-geom-line.html

--- a/_posts/ggplot2/facet_grid/2015-07-23-geom-line.html
+++ b/_posts/ggplot2/facet_grid/2015-07-23-geom-line.html
@@ -2,9 +2,9 @@
 name: <code>facet_grid</code> time series with <code>geom_line</code>
 plot_url: https://plot.ly/~MattSundquist/17931/
 language: ggplot2
-suite: time-series
+suite: grid
 description: Inspired by <a href="http://stackoverflow.com/questions/11458349/add-text-to-a-faceted-plot-in-ggplot2-with-dates-on-x-axis?rq=1">Stack Overflow</a>.
-order: 6
+order: 12
 sitemap: false
 ---
 # Learn about API authentication here: https://plot.ly/ggplot2/getting-started
