use 1.0 ggplotly call signature
- no py$ object required, ggplotly is in the library’s namespace
- add a filename with a directory to every call. it’s optional, but
it’ll help people keep an organized firewall early on.

--- a/_posts/ggplot2/geom_density/2015-08-06-conditional-curves.html
+++ b/_posts/ggplot2/geom_density/2015-08-06-conditional-curves.html
@@ -34,4 +34,4 @@ ds <- do.call(rbind, lapply(unique(mydf$cat), function(lev) {
 
 p + geom_path(data=ds, aes(x=x, y=y, color=factor(cat)))
 
-py$ggplotly()
+ggplotly(filename="r-docs/conditional-density-curves")
