--- a/_posts/ggplot2/geom_density/2015-08-06-multiple-density-plot.html
+++ b/_posts/ggplot2/geom_density/2015-08-06-multiple-density-plot.html
@@ -26,4 +26,4 @@ vegLengths <- rbind(carrots, cukes)
 #now make your lovely plot
 ggplot(vegLengths, aes(length, fill = veg)) + geom_density(alpha = 0.2)
 
-py$ggplotly()
+ggplotly(filename="r-docs/multiple-density-curves")
