--- a/_posts/ggplot2/geom_density/2015-08-06-stat-function.html
+++ b/_posts/ggplot2/geom_density/2015-08-06-stat-function.html
@@ -34,5 +34,5 @@ ggplot(dd, aes(predicted))  +
   geom_density() + 
   geom_line(aes(y = density), data = normaldens, colour = "red") +
   facet_wrap(~ state)
-  
-py$ggplotly()
+
+ggplotly(filename="r-docs/geom_stat")
