--- a/_posts/ggplot2/geom_polygon/2015-07-15-distributions.html
+++ b/_posts/ggplot2/geom_polygon/2015-07-15-distributions.html
@@ -24,5 +24,5 @@ p <- ggplot(data=dat, aes(x=x)) +
   xlab("z") + ylab("") + 
   scale_x_continuous(expand = c(0, 0)) + 
   scale_y_continuous(expand = c(0, 0))
-  
-py$ggplotly()
+
+ggplotly(filename="r-docs/distributions")
