--- a/_posts/ggplot2/geom_polygon/2015-07-15-ellipses.html
+++ b/_posts/ggplot2/geom_polygon/2015-07-15-ellipses.html
@@ -29,5 +29,4 @@ source_url("https://raw.github.com/JoFrhwld/FAAV/master/r/stat-ellipse.R")
 
 qplot(data = df, x = x, y = y, colour = class) + 
   stat_ellipse(geom = "polygon", alpha = 1/2, aes(fill = class))
-  
-py$ggplotly()
+ggplotly(filename="r-docs/ellipses")
