--- a/_posts/ggplot2/geom_polygon/2015-07-15-region-highlight.html
+++ b/_posts/ggplot2/geom_polygon/2015-07-15-region-highlight.html
@@ -17,5 +17,5 @@ tmp <- with(mtcars, data.frame(x=c(0, 0, max(wt)*35), y=c(0, max(wt), max(wt))))
 ggplot(mtcars, aes(hp, wt)) + 
   geom_polygon(data=tmp, aes(x, y), fill="#d8161688") + 
   geom_point()
-  
-py$ggplotly()
+
+ggplotly(filename="r-docs/highlight-areas")
