--- a/_posts/ggplot2/geom_density/2015-08-06-basic-example.html
+++ b/_posts/ggplot2/geom_density/2015-08-06-basic-example.html
@@ -25,4 +25,4 @@ dfGamma = stack(dfGamma)
 ggplot(dfGamma, aes(x = values)) + 
   stat_density(aes(group = ind, color = ind),position="identity",geom="line")
 
-py$ggplotly()
+ggplotly(filename="r-docs/stat_density")
