--- a/_posts/ggplot2/geom_polygon/2015-07-14-maps.html
+++ b/_posts/ggplot2/geom_polygon/2015-07-14-maps.html
@@ -36,4 +36,4 @@ p1 <- p1 + geom_path(colour = 'gray', linestyle = 2)
 p1 <- p1 + scale_fill_brewer('Unemployment Rate (Jan 2011)', palette  = 'PuRd')
 p1 <- p1 + coord_map()
 
-py$ggplotly()
+ggplotly(filename="r-docs/ggmaps")
