missing dot before "html"

--- a/_posts/ggplot2/geom_polygon/2015-07-15-convex-hull.html
+++ b/_posts/ggplot2/geom_polygon/2015-07-15-convex-hull.html
@@ -43,4 +43,4 @@ zp3 <- zp3 + geom_point(size=3)
 zp3 <- zp3 + coord_equal()
 zp3 <- zp3 + scale_fill_manual(values = colorRampPalette(rev(brewer.pal(11, "Spectral")))(setK))
 
-py$ggplotly()
+ggplotly(filename="r-docs/convex-u=hull")
