change plotly.plot to plotly.newPlot

--- a/_posts/plotly_js/area/2015-04-09-basic-area.html
+++ b/_posts/plotly_js/area/2015-04-09-basic-area.html
@@ -19,4 +19,4 @@ var trace2 = {
   type: 'scatter'
 };
 var data = [trace1, trace2];
-Plotly.plot('myDiv', data);
+Plotly.newPlot('myDiv', data, layout);
