--- a/_posts/plotly_js/bar/2015-08-07-hover-text-bar.html
+++ b/_posts/plotly_js/bar/2015-08-07-hover-text-bar.html
@@ -27,4 +27,4 @@ layout = {
   title: 'January 2013 Sales Report'
 };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
