--- a/_posts/plotly_js/bubble/2015-04-09-bubblechart.html
+++ b/_posts/plotly_js/bubble/2015-04-09-bubblechart.html
@@ -49,4 +49,4 @@ var data = [trace1, trace2, trace3];
 
 var layout = {showlegend: false};
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
