--- a/_posts/plotly_js/callbacks-click/2015-04-09-click.html
+++ b/_posts/plotly_js/callbacks-click/2015-04-09-click.html
@@ -16,7 +16,7 @@ var N = 16,
         title:'Click on Points'
      };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
 
 $('#myDiv').bind('plotly_click',
     function(event,data){
