--- a/_posts/plotly_js/callbacks-hover/2015-04-09-hover-bind.html
+++ b/_posts/plotly_js/callbacks-hover/2015-04-09-hover-bind.html
@@ -19,7 +19,7 @@ var N = 16,
         title:'Hover on Points'
      };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
 
 $('#myDiv')
     .bind('plotly_hover', function(event,data){
