--- a/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom-bind.html
+++ b/_posts/plotly_js/callbacks-zoom/2015-04-09-zoom-bind.html
@@ -12,7 +12,7 @@ var N = 40,
     data = [ { x:x, y:y } ];
     layout = { title:'Click-drag to zoom' };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
 
 $('#'+"myDiv").bind('plotly_relayout',
     function(event,eventdata){  
