--- a/_posts/plotly_js/colorscales/2015-08-10-colorscale-for-contour-plot.html
+++ b/_posts/plotly_js/colorscales/2015-08-10-colorscale-for-contour-plot.html
@@ -22,4 +22,4 @@ var layout = {
   title: 'Colorscale for Contour Plot'
 };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
