--- a/_posts/plotly_js/colorscales/2015-08-10-custom-colorscale-for-contour-plot.html
+++ b/_posts/plotly_js/colorscales/2015-08-10-custom-colorscale-for-contour-plot.html
@@ -21,4 +21,4 @@ var layout = {
   title: 'Custom Contour Plot Colorscale'
 };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
