--- a/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
+++ b/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
@@ -74,4 +74,4 @@ for ( var i = 0; i < yValues.length; i++ ) {
   };
 };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
