--- a/_posts/plotly_js/line-plots/2015-04-09-line-shapes.html
+++ b/_posts/plotly_js/line-plots/2015-04-09-line-shapes.html
@@ -62,4 +62,4 @@ var layout = {legend: {
     font: {size: 16},
     yref: 'paper'
   }};
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
