--- a/_posts/plotly_js/line-plots/2015-08-07-adding-names-to-line-and-scatter-plot.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-adding-names-to-line-and-scatter-plot.html
@@ -32,4 +32,4 @@ layout = {
   title:'Adding Names to Line and Scatter Plot'
 };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
