--- a/_posts/plotly_js/line-plots/2015-08-07-labelling-with-annotations.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-labelling-with-annotations.html
@@ -156,4 +156,4 @@ for( var i = 0 ; i < xData.length ; i++ ) {
   layout.annotations.push(result, result2);
 };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
