--- a/_posts/plotly_js/polar/2015-04-09-polar-scatter.html
+++ b/_posts/plotly_js/polar/2015-04-09-polar-scatter.html
@@ -99,4 +99,4 @@ var layout = {
   angularaxis: {tickcolor: 'rgb(253,253,253)'}
 };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
