--- a/_posts/plotly_js/subplots/2015-04-09-custom-size-subplot.html
+++ b/_posts/plotly_js/subplots/2015-04-09-custom-size-subplot.html
@@ -24,4 +24,4 @@ var layout = {
   yaxis2: {anchor: 'x2'},
   xaxis2: {domain: [0.8, 1]}
 };
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
