--- a/_posts/plotly_js/bar/2015-08-07-barchart-direct-labels.html
+++ b/_posts/plotly_js/bar/2015-08-07-barchart-direct-labels.html
@@ -46,4 +46,4 @@ for( var i = 0 ; i < xValue.length ; i++ ){
   annotationContent.push(result);
 }
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
