--- a/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
+++ b/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
@@ -97,4 +97,4 @@ for ( var i = 0 ; i < 7 ; i++ ) {
   layout.annotations.push(result);
 };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
