--- a/_posts/plotly_js/line-plots/2015-08-07-graph-and-axis-titles.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-graph-and-axis-titles.html
@@ -32,4 +32,4 @@ layout = {
   title:'Adding Names to Line and Scatter Plot'
 };
 
-Plotly.plot('myDiv', data, layout);
+Plotly.newPlot('myDiv', data, layout);
