--- a/_posts/plotly_js/line_and_scatter/2015-04-09-line-scatter.html
+++ b/_posts/plotly_js/line_and_scatter/2015-04-09-line-scatter.html
@@ -1,6 +1,6 @@
 ---
 name: Line and Scatter Plot
-plot_url: https://plot.ly/~PlotBot/84
+plot_url: http://codepen.io/plotly/embed/6da409a030be7735c216065616e7be62/?height=505&theme-id=15263&default-tab=result
 language: plotly_js
 suite: line_and_scatter
 order: 6
@@ -29,4 +29,4 @@ var trace3 = {
 
 var data = [trace1, trace2, trace3];
 
-Plotly.plot('myDiv', data);
+Plotly.newPlot('myDiv', data);
