--- a/_posts/pandas/histogram/2015-04-09-3histogram-subplots.html
+++ b/_posts/pandas/histogram/2015-04-09-3histogram-subplots.html
@@ -1,5 +1,5 @@
 ---
-name: Histograms subplotsn in Pandas
+name: Histograms subplots in Pandas
 plot_url: https://plot.ly/~cufflinks/33
 language: pandas
 suite: histogram
