--- a/_posts/pandas/horizontal-bar/2015-05-20-0simple-horizontal-bar.html
+++ b/_posts/pandas/horizontal-bar/2015-05-20-0simple-horizontal-bar.html
@@ -1,6 +1,6 @@
 ---
-name: Basic Line Plot
-plot_url: https://plot.ly/~jackp/6262
+name: Basic Horizontal Bar Chart
+plot_url: https://plot.ly/~PythonDocBot/3
 language: pandas
 suite: horizontal-bar
 order: 0
