pandas touch-ups

--- a/_posts/pandas/contour/2015-06-23-contour-filled.html
+++ b/_posts/pandas/contour/2015-06-23-contour-filled.html
@@ -1,6 +1,6 @@
 ---
 name: Filled contour plot in Pandas
-plot_url: https://plot.ly/~neda/5200
+plot_url: https://plot.ly/~jackp/10629/
 language: pandas
 suite: contour
 order: 0
