--- a/_posts/pandas/contour/2015-06-23-contour-lines.html
+++ b/_posts/pandas/contour/2015-06-23-contour-lines.html
@@ -1,6 +1,6 @@
 ---
 name: Contour plot with lines in Pandas
-plot_url: https://plot.ly/~neda/5200
+plot_url: https://plot.ly/~jackp/10579/
 language: pandas
 suite: contour
 order: 1
