--- a/_posts/pandas/density-plots/2015-04-09-2dhistogram-contour-subplots.html
+++ b/_posts/pandas/density-plots/2015-04-09-2dhistogram-contour-subplots.html
@@ -1,11 +1,12 @@
 ---
-name: 2D Histogram Contour Plot <br>with Histogram Subplots
+name: 2D Histogram Contour Plot with Histogram Subplots
 plot_url: https://plot.ly//~jackp/10551
 language: pandas
 suite: 2d-density-plot
 order: 0
 sitemap: false
 arrangement: horizontal
+height: 800
 ---
 # Learn about API authentication here: https://plot.ly/pandas/getting-started
 # Find your api_key here: https://plot.ly/settings/api
