--- a/_posts/python/marketplace-dashboards/2015-08-11-mashup-kpi-metrics-dashboard-index.html
+++ b/_posts/python/marketplace-dashboards/2015-08-11-mashup-kpi-metrics-dashboard-index.html
@@ -19,9 +19,9 @@ order: 0
   <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/keen-dashboards.css">
   <style type="text/css"></style>
   <style id="holderjs-style" type="text/css"></style>
-  <script type="text/javascript" src="{{site.staticurl}}/css/saved_resource"></script>
+  <script type="text/javascript" src="{{site.staticurl}}/javascripts/saved_resource"></script>
   <link type="text/css" href="{{site.staticurl}}/css/ui+en,table+en.css" rel="stylesheet">
-  <script type="text/javascript" src="{{site.staticurl}}/css/webfontloader,format+en,default+en,ui+en,table+en,corechart+en.I.js"></script>
+  <script type="text/javascript" src="{{site.staticurl}}/javascripts/webfontloader,format+en,default+en,ui+en,table+en,corechart+en.I.js"></script>
   </head>
 <body class="application">
 
