--- a/_posts/pandas/3d-surface/2015-04-09-3d-surface-volcano.html
+++ b/_posts/pandas/3d-surface/2015-04-09-3d-surface-volcano.html
@@ -1,8 +1,8 @@
 ---
-name: 3D Scatter Plot
-plot_url: https://plot.ly/~jackp/10689
+name: Topographical 3D Surface Plot
+plot_url: https://plot.ly/~jackp/10544/iris-dataset/
 language: pandas
-suite: 3d-scatter
+suite: 3d-surface
 order: 0
 sitemap: false
 arrangement: horizontal
@@ -13,33 +13,15 @@ arrangement: horizontal
 import plotly.plotly as py
 from plotly.graph_objs import *
 import pandas as pd
-df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/iris.csv')
-df.head()
+df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/volcano.csv')
 
-data = []
-clusters = []
-colors = ['rgb(228,26,28)','rgb(55,126,184)','rgb(77,175,74)']
-
-for i in range(len(df['Name'].unique())):
-    name = df['Name'].unique()[i]
-    color = colors[i]
-    x = df[ df['Name'] == name ]['SepalLength']
-    y = df[ df['Name'] == name ]['SepalWidth']
-    z = df[ df['Name'] == name ]['PetalLength']
-    
-    trace = dict(
-        name = name,
-        x = x, y = y, z = z,
-        type = "scatter3d",    
-        mode = 'markers',
-        marker = dict( size=3, color=color, line=dict(width=0) ) )
-    data.append( trace )
+data = Data([Surface( z=df.values.tolist(), colorscale='Viridis' )])
 
 layout = dict(
     width=800,
-    height=550,
+    height=700,
     autosize=False,
-    title='Iris dataset',
+    title='Volcano dataset',
     scene=dict(
         xaxis=XAxis(
             gridcolor='rgb(255, 255, 255)',
@@ -67,6 +49,6 @@ layout = dict(
 fig = dict(data=data, layout=layout)
 
 # IPython notebook
-# py.iplot(fig, filename='pandas-3d-iris', validate=False)
+# py.iplot(fig, filename='pandas-3d-surface', height=700, validate=False)
 
-url = py.plot(fig, filename='pandas-3d-iris', validate=False)
+url = py.iplot(fig, filename='pandas-3d-surface', validate=False)
