--- a/_posts/pandas/error-bar/2015-04-09-2continuous-variable.html
+++ b/_posts/pandas/error-bar/2015-04-09-2continuous-variable.html
@@ -5,6 +5,7 @@ language: pandas
 suite: error-bar
 order: 2
 sitemap: false
+arrangement: horizontal
 ---
 # Learn about API authentication here: https://plot.ly/pandas/getting-started
 # Find your api_key here: https://plot.ly/settings/api
