--- a/_posts/pandas/polar/2015-04-09-polar-scatter.html
+++ b/_posts/pandas/polar/2015-04-09-polar-scatter.html
@@ -6,6 +6,7 @@ language: pandas
 suite: polar
 order: 0
 sitemap: false
+arrangement: horizontal
 ---
 # Learn about API authentication here: https://plot.ly/pandas/getting-started
 # Find your api_key here: https://plot.ly/settings/api
