--- a/_posts/pandas/time-series/2015-04-09-3time-series-index-as-date.html
+++ b/_posts/pandas/time-series/2015-04-09-3time-series-index-as-date.html
@@ -1,10 +1,11 @@
 ---
 name: Pandas Dataframe Index as Date
-plot_url: https://plot.ly/~jackp/10599
+plot_url: https://plot.ly/~cufflinks/6
 language: pandas
 suite: time-series
 order: 3
 sitemap: false
+arrangement: horizontal
 ---
 # Learn about API authentication here: https://plot.ly/pandas/getting-started
 # Find your api_key here: https://plot.ly/settings/api
