--- a/_posts/pandas/time-series/2015-04-09-4time-series-subplots.html
+++ b/_posts/pandas/time-series/2015-04-09-4time-series-subplots.html
@@ -5,6 +5,7 @@ language: pandas
 suite: time-series
 order: 4
 sitemap: false
+arrangement: horizontal
 ---
 # Learn about API authentication here: https://plot.ly/pandas/getting-started
 # Find your api_key here: https://plot.ly/settings/api
