--- a/_posts/python/dashboard/2015-07-29-dashboard-index.html
+++ b/_posts/python/dashboard/2015-07-29-dashboard-index.html
@@ -68,7 +68,7 @@ order: 0
               <li><a href="https://plot.ly/{{page.language | capitalize}}/sending-data-to-charts/#add-new-traces-to-a-chart">Adding new traces to a chart</a></li>
             </ul>
           </li>
-
+          <li><a href="/python/dashboard/marketplace-kpi-metrics/">KPI Dashboards</a></li>
           <li><a href="http://stackoverflow.com/questions/tagged/plotly?sort=newest&pageSize=15">Technical Support</a></li>         
           <li><a href="https://github.com/plotly/sample-dashboards/raw/master/Plotly%20Sample%20Dashboard.zip">Download Template</a></li>
         </ul>
