--- a/_posts/python/marketplace-dashboards/2015-08-11-marketplace-kpi-metrics-dashboard-index.html
+++ b/_posts/python/marketplace-dashboards/2015-08-11-marketplace-kpi-metrics-dashboard-index.html
@@ -16,7 +16,7 @@ order: 0
   <link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" />
   <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="{{site.staticurl}}/css/keen-dashboards.css">
-<style type="text/css"></style><style id="holderjs-style" type="text/css"></style><script type="text/javascript" src="{{site.staticurl}}/css/saved_resource"></script><link type="text/css" href="{{site.staticurl}}/css/ui+en,table+en.css" rel="stylesheet"><script type="text/javascript" src="{{site.staticurl}}/css/webfontloader,format+en,default+en,ui+en,table+en,corechart+en.I.js"></script></head>
+<style type="text/css"></style><style id="holderjs-style" type="text/css"></style><script type="text/javascript" src="{{site.staticurl}}/javascripts/saved_resource"></script><link type="text/css" href="{{site.staticurl}}/css/ui+en,table+en.css" rel="stylesheet"><script type="text/javascript" src="{{site.staticurl}}/javascripts/webfontloader,format+en,default+en,ui+en,table+en,corechart+en.I.js"></script></head>
 <body class="application">
 
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
