--- a/_posts/pandas/3d-surface/2015-04-09-3d-surface-volcano.html
+++ b/_posts/pandas/3d-surface/2015-04-09-3d-surface-volcano.html
@@ -1,6 +1,6 @@
 ---
 name: Topographical 3D Surface Plot
-plot_url: https://plot.ly/~jackp/10544/iris-dataset/
+plot_url: https://plot.ly/~jackp/10544/
 language: pandas
 suite: 3d-surface
 order: 0
