Its a custom colorscale for *heatmaps*

--- a/_posts/python/colorscales/2015-04-09-custom-colorscale.html
+++ b/_posts/python/colorscales/2015-04-09-custom-colorscale.html
@@ -1,5 +1,5 @@
 ---
-name: Custom Colorscale
+name: Custom Heatmap Colorscale
 plot_url: https://plot.ly/~PlotBot/72
 language: python
 suite: colorscales
