--- a/_posts/plotly_js/box/2015-04-09-box-plot-jitter.html
+++ b/_posts/plotly_js/box/2015-04-09-box-plot-jitter.html
@@ -8,11 +8,12 @@ sitemap: false
 ---
 var data = [
   {
-    y: [0, 1, 1, 2, 3, 5, 8, 13, 21], 
-    boxpoints: "all", 
-    jitter: 0.3, 
-    pointpos: -1.8, 
-    type: "box"
+    y: [0, 1, 1, 2, 3, 5, 8, 13, 21],
+    boxpoints: 'all',
+    jitter: 0.3,
+    pointpos: -1.8,
+    type: 'box'
   }
 ];
-Plotly.plot("myDiv", data);
+
+Plotly.newPlot('myDiv', data);
