minor edits and add colorscale

--- a/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar-marker-array.html
@@ -15,9 +15,9 @@ var trace1 = {
   type: 'bar'
 };
 
-data = [trace1];
+var data = [trace1];
 
-layout = {
+var layout = {
   title: 'Least Used Feature'
 };
 
