--- a/_posts/plotly_js/bar/2015-08-07-Rotated-bar-chart-labels.html
+++ b/_posts/plotly_js/bar/2015-08-07-Rotated-bar-chart-labels.html
@@ -29,8 +29,9 @@ var trace2 = {
   }
 };
 
-data = [trace1, trace2];
-layout = {
+var data = [trace1, trace2];
+
+var layout = {
   title: '2013 Sales Report',
   xaxis: {
     tickangle: -45
