--- a/_posts/plotly_js/bar/2015-08-07-bar-chart-with-hover-text.html
+++ b/_posts/plotly_js/bar/2015-08-07-bar-chart-with-hover-text.html
@@ -17,8 +17,9 @@ var trace1 = {
   }
 };
 
-data = [trace1];
-layout = {
+var data = [trace1];
+
+var layout = {
   title: 'Number of Graphs Made this Week',
   font:{
     family: 'Raleway, snas-serif'
