--- a/_posts/plotly_js/bar/2015-08-07-hover-text-bar.html
+++ b/_posts/plotly_js/bar/2015-08-07-hover-text-bar.html
@@ -22,8 +22,9 @@ var trace1 = {
   }
 };
 
-data = [trace1];
-layout = {
+var data = [trace1];
+
+var layout = {
   title: 'January 2013 Sales Report'
 };
 
