--- a/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
+++ b/_posts/plotly_js/bar/2015-08-07-waterfall-bar-chart.html
@@ -15,7 +15,7 @@ var xData = ['Product<br>Revenue', 'Services<br>Revenue',
 
 var yData = [400, 660, 660, 590, 400, 400, 340];
 
-textList = ['$430K', '$260K', '$690K', '$-120K', '$-200K', '$-320K', '$370K'];
+var textList = ['$430K', '$260K', '$690K', '$-120K', '$-200K', '$-320K', '$370K'];
 
 //Base
 var trace1 = {
@@ -69,9 +69,9 @@ var trace4 = {
   }
 };
 
-data = [trace1, trace2, trace3, trace4];
+var data = [trace1, trace2, trace3, trace4];
 
-layout = {
+var layout = {
   title: 'Annual Profit 2015',
   barmode: 'stack',
   paper_bgcolor: 'rgba(245,246,249,1)',
@@ -95,6 +95,6 @@ for ( var i = 0 ; i < 7 ; i++ ) {
     showarrow: false
   };
   layout.annotations.push(result);
-};
+}
 
 Plotly.newPlot('myDiv', data, layout);
