--- a/_posts/plotly_js/bubble/2015-08-10-hover-text-bubblechart.html
+++ b/_posts/plotly_js/bubble/2015-08-10-hover-text-bubblechart.html
@@ -18,9 +18,9 @@ var trace1 = {
   }
 };
 
-data = [trace1];
+var data = [trace1];
 
-layout = {
+var layout = {
   title: 'Bubble Chart Hover Text',
   showlegend: false,
   height: 600,
