--- a/_posts/plotly_js/bubble/2015-08-10-markersize-bubblechart.html
+++ b/_posts/plotly_js/bubble/2015-08-10-markersize-bubblechart.html
@@ -16,9 +16,9 @@ var trace1 = {
   }
 };
 
-data = [trace1];
+var data = [trace1];
 
-layout = {
+var layout = {
   title: 'Marker Size',
   showlegend: false,
   height: 600,
