--- a/_posts/plotly_js/bubble/2015-08-10-size-scaling-bubblechart.html
+++ b/_posts/plotly_js/bubble/2015-08-10-size-scaling-bubblechart.html
@@ -44,9 +44,9 @@ var trace3 = {
   }
 };
 
-data = [trace1, trace2, trace3];
+var data = [trace1, trace2, trace3];
 
-layout = {
+var layout = {
   title: 'Bubble Chart Size Scaling',
   showlegend: false,
   height: 600,
