--- a/_posts/plotly_js/colorscales/2015-08-10-custom-colorscale-for-contour-plot.html
+++ b/_posts/plotly_js/colorscales/2015-08-10-custom-colorscale-for-contour-plot.html
@@ -1,6 +1,6 @@
 ---
 name: Custom Colorscale for Contour Plot
-plot_url: https://plot.ly/5159/~neda/
+plot_url: https://plot.ly/~Nicole_G/3021/
 language: plotly_js
 suite: colorscales
 order: 21
