--- a/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
+++ b/_posts/plotly_js/heatmap/2015-08-10-annotated-heatmap.html
@@ -7,6 +7,7 @@ order: 2
 sitemap: false
 ---
 var xValues = ['A', 'B', 'C', 'D', 'E'];
+
 var yValues = ['W', 'X', 'Y', 'Z'];
 
 var zValues = [
@@ -30,7 +31,7 @@ var data = [{
   showscale: false
 }];
 
-layout = {
+var layout = {
   title: 'Annotated Heatmap',
   annotations: [],
   xaxis: {
@@ -52,8 +53,8 @@ for ( var i = 0; i < yValues.length; i++ ) {
     if (currentValue != 0.0) {
       var textColor = 'white';
     }else{
-      var textColor = 'black'
-    };
+      var textColor = 'black';
+    }
     var result = {
       xref: 'x1',
       yref: 'y1',
@@ -71,7 +72,7 @@ for ( var i = 0; i < yValues.length; i++ ) {
       }
     };
     layout.annotations.push(result);
-  };
-};
+  }
+}
 
 Plotly.newPlot('myDiv', data, layout);
