--- a/_posts/plotly_js/horizontal-bar/2015-04-09-basic-horizontal-bar.html
+++ b/_posts/plotly_js/horizontal-bar/2015-04-09-basic-horizontal-bar.html
@@ -7,7 +7,7 @@ order: 0
 sitemap: false
 ---
 
-data = [{
+var data = [{
   type: 'bar',
   x: [20, 14, 23],
   y: ['giraffes', 'orangutans', 'monkeys'],
