--- a/_posts/plotly_js/horizontal-bar/2015-07-08-colored-bar-chart.html
+++ b/_posts/plotly_js/horizontal-bar/2015-07-08-colored-bar-chart.html
@@ -31,8 +31,9 @@ var trace2 = {
   }
 };
 
-data = [trace1, trace2];
-layout = {
+var data = [trace1, trace2];
+
+var layout = {
   title: 'Colored Bar Chart',
   barmode: 'stack'
 };
