--- a/_posts/plotly_js/line-plots/2015-08-07-Connect-gaps-between-data.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-Connect-gaps-between-data.html
@@ -21,8 +21,9 @@ var trace2 = {
   connectgaps: true
 };
 
-data = [trace1, trace2];
-layout = {
+var data = [trace1, trace2];
+
+var layout = {
   title: 'Connect the Gaps Between Data',
   showlegend: false
 };
