--- a/_posts/plotly_js/line-plots/2015-08-07-adding-names-to-line-and-scatter-plot.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-adding-names-to-line-and-scatter-plot.html
@@ -27,8 +27,10 @@ var trace3 = {
   mode: 'lines+markers',
   name: 'Scatter + Lines'
 };
-data = [ trace1, trace2, trace3 ];
-layout = {
+
+var data = [ trace1, trace2, trace3 ];
+
+var layout = {
   title:'Adding Names to Line and Scatter Plot'
 };
 
