--- a/_posts/plotly_js/line-plots/2015-08-07-line-and-scatter-plot.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-line-and-scatter-plot.html
@@ -25,9 +25,9 @@ var trace3 = {
   mode: 'lines+markers'
 };
 
-data = [ trace1, trace2, trace3 ];
+var data = [ trace1, trace2, trace3 ];
 
-layout = {
+var layout = {
   title:'Line and Scatter Plot'
 };
 
