--- a/_posts/plotly_js/line-plots/2015-08-07-line-and-scatter-styling.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-line-and-scatter-styling.html
@@ -40,8 +40,10 @@ var trace3 = {
     width: 1
   }
 };
-data = [trace1, trace2, trace3];
-layout = {
+
+var data = [trace1, trace2, trace3];
+
+var layout = {
   title: 'Line and Scatter Styling'
 };
 
