--- a/_posts/plotly_js/line-plots/2015-08-07-line-dash.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-line-dash.html
@@ -51,9 +51,9 @@ var trace4 = {
   }
 };
 
-data = [trace1, trace2, trace3, trace4];
+var data = [trace1, trace2, trace3, trace4];
 
-layout = {
+var layout = {
   title: 'Line Dash',
   xaxis: {
     range: [0.75, 5.25],
