--- a/_posts/plotly_js/line-plots/2015-08-07-styling-line-plot.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-styling-line-plot.html
@@ -31,11 +31,11 @@ trace2 = {
   }
 };
 
-layout = {
+var layout = {
   width: 500,
   height: 500
 };
 
-data = [trace1, trace2];
+var data = [trace1, trace2];
 
 Plotly.newPlot('myDiv', data, layout);
