--- a/_posts/plotly_js/pie/2015-08-10-basic-pie-chart.html
+++ b/_posts/plotly_js/pie/2015-08-10-basic-pie-chart.html
@@ -7,13 +7,13 @@ order: 1
 sitemap: false
 ---
 
-data = [{
+var data = [{
   values: [19, 26, 55],
   labels: ['Residential', 'Non-Residential', 'Utility'],
   type: 'pie'
 }];
 
-layout = {
+var layout = {
   height: 400,
   width: 500
 };
