--- a/_posts/plotly_js/pie/2015-08-10-donut-chart.html
+++ b/_posts/plotly_js/pie/2015-08-10-donut-chart.html
@@ -7,7 +7,7 @@ order: 3
 sitemap: false
 ---
 
-data = [{
+var data = [{
   values: [16, 15, 12, 6, 5, 4, 42],
   labels: ['US', 'China', 'European Union', 'Russian Federation', 'Brazil', 'India', 'Rest of World' ],
   domain: {
@@ -29,7 +29,7 @@ data = [{
   type: 'pie'
 }];
 
-layout = {
+var layout = {
   title: 'Global Emissions 1990-2011',
   annotations: [
     {
