--- a/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
+++ b/_posts/plotly_js/pie/2015-08-10-pie_plotly_js_index.html
@@ -1,8 +1,8 @@
 ---
 title: Javascript Graphing Library Pie Charts | Examples | Plotly
 name: Pie Charts
-permalink: javascript-graphing-library/polar-chart/
-description: How to graph pie charts in javascript. Examples of pie charts, donut charts and pir chart subplots.
+permalink: javascript-graphing-library/pie-chart/
+description: How to graph pie charts in javascript. Examples of pie charts, donut charts and pie chart subplots.
 layout: base
 thumbnail: /images/pie-chart.png
 language: plotly_js
