--- a/_posts/plotly_js/shapes/2015-08-10-basic-arbitrary-svg-paths.html
+++ b/_posts/plotly_js/shapes/2015-08-10-basic-arbitrary-svg-paths.html
@@ -14,7 +14,7 @@ var trace1 = {
   mode: 'text'
 };
 
-layout = {
+var layout = {
   title: 'Basic Arbitrary SVG Paths',
   xaxis: {
     range: [0, 9],
