--- a/_posts/plotly_js/shapes/2015-08-10-lines-positioned-relative-to-axis.html
+++ b/_posts/plotly_js/shapes/2015-08-10-lines-positioned-relative-to-axis.html
@@ -14,7 +14,7 @@ var trace1 = {
   mode: 'text'
 };
 
-layout = {
+var layout = {
   title: 'Vertical and Horizontal Lines Positioned Relative to the Axes',
   xaxis: {
     range: [0, 7]
@@ -67,4 +67,5 @@ layout = {
 };
 
 var data = [trace1];
+
 Plotly.newPlot('myDiv', data, layout);
