--- a/_posts/plotly_js/shapes/2015-08-10-rectangle-positioned-relative-to-axis.html
+++ b/_posts/plotly_js/shapes/2015-08-10-rectangle-positioned-relative-to-axis.html
@@ -14,7 +14,7 @@ var trace1 = {
   mode: 'text'
 };
 
-layout = {
+var layout = {
   title: 'Rectangle Positioned Relative to the Axes',
   xaxis: {
     range: [0, 7],
