--- a/_posts/plotly_js/shapes/2015-08-10-rectangles-positioned-relative-to-plot-and-axes.html
+++ b/_posts/plotly_js/shapes/2015-08-10-rectangles-positioned-relative-to-plot-and-axes.html
@@ -14,7 +14,7 @@ var trace1 = {
   mode: 'text'
 };
 
-layout = {
+var layout = {
   title: 'Rectangles Positioned Relative to the Plot and to the Axes',
   xaxis: {
     range: [0, 4],
