--- a/_posts/plotly_js/shapes/2015-08-10-tangent-lines-with-shapes.html
+++ b/_posts/plotly_js/shapes/2015-08-10-tangent-lines-with-shapes.html
@@ -8,6 +8,7 @@ sitemap: false
 ---
 
 var xValues = numeric.linspace(1, 3, 200);
+
 var yValues = [];
 
 for ( var i = 0 ; i < xValues.length ; i++ ) {
@@ -21,8 +22,9 @@ var trace1 = {
   type: 'scatter'
 };
 
-data = [trace1];
-layout = {
+var data = [trace1];
+
+var layout = {
   title: 'Creating Tangent Lines with Shapes',
   shapes: [{
     type: 'line',
