--- a/_posts/plotly_js/shapes/2015-08-10-venn-diagram-with-circle-shapes.html
+++ b/_posts/plotly_js/shapes/2015-08-10-venn-diagram-with-circle-shapes.html
@@ -20,7 +20,7 @@ var trace1 = {
   }
 };
 
-layout = {
+var layout = {
   title: 'Venn Diagram with Circle Shapes',
   xaxis: {
     showticklabels: false,
@@ -71,4 +71,5 @@ layout = {
 };
 
 var data = [trace1];
+
 Plotly.newPlot('myDiv', data, layout);
