--- a/_posts/plotly_js/bubble/2015-08-10-marker-size-and-color.html
+++ b/_posts/plotly_js/bubble/2015-08-10-marker-size-and-color.html
@@ -18,9 +18,9 @@ var trace1 = {
   }
 };
 
-data = [trace1];
+var data = [trace1];
 
-layout = {
+var layout = {
   title: 'Marker Size and Color',
   showlegend: false,
   height: 600,
