--- a/_posts/plotly_js/colorscales/2015-04-09-colorscales_plotlyjs_index.html
+++ b/_posts/plotly_js/colorscales/2015-04-09-colorscales_plotlyjs_index.html
@@ -11,5 +11,5 @@ has_thumbnail: true
 display_as: chart_type
 order: 8
 ---
-{% assign examples = site.posts | where:"language","plotly_js" | where:"suite","colorscales" | sort: "order" %}
+{% assign examples = site.posts | where:'language','plotly_js' | where:'suite','colorscales' | sort: 'order' %}
 {% include auto_examples.html examples=examples %}
