--- a/_posts/plotly_js/line-plots/2015-04-09-line-shapes.html
+++ b/_posts/plotly_js/line-plots/2015-04-09-line-shapes.html
@@ -10,10 +10,11 @@ var trace1 = {
   x: [1, 2, 3, 4, 5],
   y: [1, 3, 2, 3, 1],
   mode: 'lines+markers',
-  name: 'linear,
+  name: 'linear',
   line: {shape: 'linear'},
   type: 'scatter'
 };
+
 var trace2 = {
   x: [1, 2, 3, 4, 5],
   y: [6, 8, 7, 8, 6],
@@ -23,6 +24,7 @@ var trace2 = {
   line: {shape: 'spline'},
   type: 'scatter'
 };
+
 var trace3 = {
   x: [1, 2, 3, 4, 5],
   y: [11, 13, 12, 13, 11],
@@ -31,6 +33,7 @@ var trace3 = {
   line: {shape: 'vhv'},
   type: 'scatter'
 };
+
 var trace4 = {
   x: [1, 2, 3, 4, 5],
   y: [16, 18, 17, 18, 16],
@@ -39,6 +42,7 @@ var trace4 = {
   line: {shape: 'hvh'},
   type: 'scatter'
 };
+
 var trace5 = {
   x: [1, 2, 3, 4, 5],
   y: [21, 23, 22, 23, 21],
@@ -47,6 +51,7 @@ var trace5 = {
   line: {shape: 'vh'},
   type: 'scatter'
 };
+
 var trace6 = {
   x: [1, 2, 3, 4, 5],
   y: [26, 28, 27, 28, 26],
@@ -55,11 +60,15 @@ var trace6 = {
   line: {shape: 'hv'},
   type: 'scatter'
 };
+
 var data = [trace1, trace2, trace3, trace4, trace5, trace6];
-var layout = {legend: {
+
+var layout = {
+  legend: {
     y: 0.5,
     traceorder: 'reversed',
     font: {size: 16},
     yref: 'paper'
   }};
+
 Plotly.newPlot('myDiv', data, layout);
