--- a/_posts/plotly_js/line-plots/2015-08-07-graph-and-axis-titles.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-graph-and-axis-titles.html
@@ -1,6 +1,6 @@
 ---
 name: Graph and Axes Titles
-plot_url: http://codepen.io/plotly/embed/d88fad4731b51b02f356833fa0c5773c/?height=516&theme-id=15263&default-tab=result
+plot_url: http://codepen.io/plotly/embed/8dbd616de1143477b823035ea2b00529/?height=511&theme-id=15263&default-tab=result
 language: plotly_js
 suite: line-plots
 order: 9
@@ -25,11 +25,19 @@ var trace3 = {
   x: [1, 2, 3, 4],
   y: [12, 9, 15, 12],
   mode: 'lines+markers',
-  name: 'Scatter + Lines'
+  name: 'Scatter and Lines'
 };
-data = [ trace1, trace2, trace3 ];
-layout = {
-  title:'Adding Names to Line and Scatter Plot'
+
+var data = [trace1, trace2, trace3];
+
+var layout = {
+  title: 'Title of the Graph',
+  xaxis: {
+    title: 'x-axis title'
+  },
+  yaxis: {
+    title: 'y-axis title'
+  }
 };
 
 Plotly.newPlot('myDiv', data, layout);
