--- a/_posts/plotly_js/line-plots/2015-08-07-labelling-with-annotations.html
+++ b/_posts/plotly_js/line-plots/2015-08-07-labelling-with-annotations.html
@@ -29,7 +29,7 @@ var lineSize = [2, 2, 4, 2];
 
 var labels = ['Television', 'Newspaper', 'Internet', 'Radio'];
 
-data = [];
+var data = [];
 
 for ( var i = 0 ; i < xData.length ; i++ ) {
   var result = {
@@ -53,9 +53,9 @@ for ( var i = 0 ; i < xData.length ; i++ ) {
     }
   };
   data.push(result, result2);
-};
+}
 
-layout = {
+var layout = {
   showlegend: false,
   height: 600,
   width: 600,
@@ -154,6 +154,6 @@ for( var i = 0 ; i < xData.length ; i++ ) {
   };
 
   layout.annotations.push(result, result2);
-};
+}
 
 Plotly.newPlot('myDiv', data, layout);
