--- a/_posts/plotly_js/pie/2015-08-10-pie-chart-subplots.html
+++ b/_posts/plotly_js/pie/2015-08-10-pie-chart-subplots.html
@@ -7,23 +7,23 @@ order: 2
 sitemap: false
 ---
 
-allLabels = ['1st', '2nd', '3rd', '4th', '5th'];
+var allLabels = ['1st', '2nd', '3rd', '4th', '5th'];
 
-allValues = [
+var allValues = [
   [38, 27, 18, 10, 7],
   [28, 26, 21, 15, 10],
   [38, 19, 16, 14, 13],
   [31, 24, 19, 18, 8]
 ];
 
-ultimateColors = [
+var ultimateColors = [
   ['rgb(56, 75, 126)', 'rgb(18, 36, 37)', 'rgb(34, 53, 101)', 'rgb(36, 55, 57)', 'rgb(6, 4, 4)'],
   ['rgb(177, 127, 38)', 'rgb(205, 152, 36)', 'rgb(99, 79, 37)', 'rgb(129, 180, 179)', 'rgb(124, 103, 37)'],
   ['rgb(33, 75, 99)', 'rgb(79, 129, 102)', 'rgb(151, 179, 100)', 'rgb(175, 49, 35)', 'rgb(36, 73, 147)'],
   ['rgb(146, 123, 21)', 'rgb(177, 180, 34)', 'rgb(206, 206, 40)', 'rgb(175, 51, 21)', 'rgb(35, 36, 21)']
 ];
 
-data = [{
+var data = [{
   values: allValues[0],
   labels: allLabels,
   type: 'pie',
@@ -81,7 +81,7 @@ data = [{
   textinfo: 'none'
 }];
 
-layout = {
+var layout = {
   height: 400,
   width: 500
 };
