--- a/_posts/plotly_js/shapes/2015-08-10-lines-positioned-realative-to-plot-and-to-axis.html
+++ b/_posts/plotly_js/shapes/2015-08-10-lines-positioned-realative-to-plot-and-to-axis.html
@@ -14,7 +14,7 @@ var trace1 = {
   mode: 'text'
 };
 
-layout = {
+var layout = {
   title: 'Lines Positioned Relative to the Plot & to the Axes',
   xaxis: {
     range: [0, 8]
