--- a/_posts/plotly_js/time-series/2015-04-09-date-axes.html
+++ b/_posts/plotly_js/time-series/2015-04-09-date-axes.html
@@ -1,6 +1,6 @@
 ---
 name: Date Strings
-plot_url: https://plot.ly/~PlotBot/76
+plot_url: http://codepen.io/plotly/embed/b2233edcd3d97500db0a2ade7b2cbdf0/?height=443&theme-id=15263&default-tab=result
 language: plotly_js
 suite: time-series
 order: 1
@@ -8,9 +8,10 @@ sitemap: false
 ---
 var data = [
   {
-    x: ["2013-10-04 22:23:00", "2013-11-04 22:23:00", "2013-12-04 22:23:00"], 
-    y: [1, 3, 6], 
-    type: "scatter"
+    x: ['2013-10-04 22:23:00', '2013-11-04 22:23:00', '2013-12-04 22:23:00'],
+    y: [1, 3, 6],
+    type: 'scatter'
   }
 ];
-Plotly.plot("myDiv", data);
+
+Plotly.newPlot('myDiv', data);
