--- a/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
+++ b/_posts/plotly_js/getting-started/2015-07-21-plotlyjs-getting-started.html
@@ -29,7 +29,7 @@ language: plotly_js
         </div>
         
         <p style="text-align: center;">
-  			<a class="button plotlyjs-download" href="http://bit.ly/1gNqEZP" target="_blank" 
+  			<a class="button plotlyjs-download" href="{{site.plotlyjs_download_url}}" target="_blank"
   			onclick="onclick=mixpanel.track('PlotlyJS Download',{ 'Location': 'Getting Started Step 1' });" style="display: inline-block;">
 				<i class="fa fa-download fa-lg"></i> Download&nbsp;Plotly.js</a>
 		</p>
